Update java/spring
+ update to java 18
+ spring-boot 2.7.2